# Computer

./: .gitignore
core/: Cargo.toml
core/computer-api/: Cargo.toml
core/computer-api/src/: command.rs  lib.rs
core/computer-plugin/: Cargo.toml
core/computer-plugin/src/: files.rs  lib.rs
core/computer-plugin/src/command/: mod.rs  panel.rs
core/computer-plugin/src/config/: mod.rs  networking.rs  panel.rs  websocket.rs
core/computer-plugin/src/server/: assets.rs  auth.rs  http.rs  listener.rs  mod.rs  session.rs  ws.rs
core/src/: lib.rs
panel/: index.html  package-lock.json  package.json  vite.config.ts
panel/src/: App.tsx
panel/src/components/layout/: AppLayout.css  AppLayout.tsx  ChapterView.css  ChapterView.tsx  FileView.css  FileView.tsx  HomeView.css  HomeView.tsx
panel/src/components/sidebar/: Sidebar.css  Sidebar.tsx
panel/src/components/tabs/: TabBar.css  TabBar.tsx
panel/src/store/: AppContext.tsx  useWebsocket.tsx
panel/src/styles/: globals.css
panel/src/types/: fileTypes.tsx  index.ts
