[workspace]
resolver = "2"
members = [
    "computer-plugin",
    "computer-api"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
computer-plugin = { path = "computer-plugin" }
computer-api = { path = "computer-api" }
pumpkin-plugin-api = { version = "0.1.0", git = "https://github.com/Pumpkin-MC/Pumpkin", package = "pumpkin-plugin-api" }
tracing = "0.1"
toml = "1.1"
serde = { version = "1.0", features = ["derive"] }
tungstenite = { version = "0.29", features = ["handshake"] }
rust-embed = "8"
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = true
