[package]
name = "computer-plugin"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
computer-api.workspace = true
pumpkin-plugin-api.workspace = true
tracing.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
tungstenite.workspace = true
rust-embed.workspace = true
uuid.workspace = true
